employee-manifest/base/frontend/fe-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  # namespace: intern-workspace
spec:
  podSelector:
    matchLabels:
      app: employee-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 30080

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: employee-backend
      ports:
        - protocol: TCP
          port: 4000
  
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
